tests/fixtures/multi_module/invalid/cycle/beta.furqan
bismillah Beta {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: second
    not_scope: nothing_excluded
}

tanzil beta_deps {
    depends_on: Alpha
}

fn placeholder() -> Integrity {
    return Integrity
}
